Fix all alt labels, and change color contrast for buttons

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 .sign-up {
-  background-color: #738461;
+  background-color: #ac1c2e;
   color: #fff;
   border: none;
 }
@@ -41,7 +41,7 @@ h1 {
 }
 
 .card {
-  background-color: #c2b4b8;
+  background-color: #acd0df;
   color: #000;
 }
 
